tests/neg/i11225b.check
-- Error: tests/neg/i11225b.scala:6:26 ---------------------------------------------------------------------------------
6 |  private var cached: A = _ // error
  |                          ^
  |                          `= _` has been deprecated; use `= uninitialized` instead.
  |                          `uninitialized` can be imported with `scala.compiletime.uninitialized`.
  |                          This construct can be rewritten automatically under -rewrite -source 3.4-migration.
